# multicot-back

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_04_16_4b13f6bbf71c_init.py
app/: main.py
app/agencies/: schemas.py  service.py
app/api/v1/: agencies.py  auth.py  quotes.py  router.py  sellers.py  users.py
app/auth/: schemas.py  service.py
app/core/: config.py  database.py  retrievable_password.py  security.py
app/models/: __init__.py  agency.py  base.py  seller.py  user.py
app/quotations/: schemas.py
app/sellers/: schemas.py  service.py
app/services/: quote_service.py
app/services/companies/: base.py  cardinal.py  go_assistance.py  inter_assist.py  new_travel.py  pax.py  terrawind.py  universal.py
app/users/: schemas.py  service.py
scripts/: add_password_encrypted_column.py  create_user.py
test/: universal.http
tests/: go.http  newTravel.http  pax.http  terra.http
